HotSpotResolvedJavaMethod#setNotInlineable() should be renamed to represent actual behavior

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • b21

      http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2017-May/026218.html

      HotSpotResolvedJavaMethod#setNotInlineable() is explained that "Manually adds a DontInline annotation to this method" in the comment, however this method seems to disable C1/C2 compile in CompilerToVM [1][2].

      The method name should be changed to "setNotInlineableOrCompileable" .

      [1] http://hg.openjdk.java.net/jdk9/dev/hotspot/file/d6d7e5caf497/src/jdk.internal.vm.ci/share/classes/jdk.vm.ci.hotspot/src/jdk/vm/ci/hotspot/HotSpotResolvedJavaMethodImpl.java#l320
      [2] http://hg.openjdk.java.net/jdk9/dev/hotspot/file/d6d7e5caf497/src/share/vm/jvmci/jvmciCompilerToVM.cpp#l1004

            Assignee:
            Yasumasa Suenaga
            Reporter:
            Yasumasa Suenaga
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: