8180487: HotSpotResolvedJavaMethod.setNotInlineable() should be renamed to represent actual behavior

Rename setNotInlineable() to setNotInlineableOrCompileable()

Reviewed-by: dnsimon, kvn